static/css/dashboard.css
/* ... */
.info2 {
	max-width:350px;
	top: 130px;
	position: fixed;
	left: 5px;
	z-index: 9999;
	color: #5083B0;
	font-weight: bold;
	font-family: Verdana;
	font-size: 16px;
	display:block !important;
}

.dashboard_legend{
}

#base_data_visibility_radio {
	position: absolute;
	right: 6px;
	font-family: Verdana;
	font-size: 11px;
	font-family: arial;
	top: 2px;
}

.loading{
    display: none;
    float: right;
    position: absolute;
    right: 0px;
    width: 479px;
    height: 100%;
    z-index: 9999999;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding-top: 20%;
	background-color:white;
	opacity:.9;
}

.selectedFeaturesListHeader {
	height: 25px;
	font: 16px verdana;
	letter-spacing: 1.5px !important;
	padding: 10px;
	color: white;
	font-weight: bold;
	font-variant: small-caps;
	background-color: #4C9ED9;
	font-style: italic;
	text-align:center;
	padding-bottom:12px;
}

#Header1 {
	text-align: left;
	padding-left: 45px;
	line-height:13px;
	padding-top:13px
}

.changeHeader {
}

.changeSubheader{
	font-size: 0.7em;
	margin-left: 25px;
	font-weight:normal;
	margin-top:3px;
	position:relative;
	top:2px;
}

#timePeriodRadioDiv {
	font-size: 11px;
	float: right;
	position: absolute;
	top: 5px;
	left: 261px;
}

#unitsRadioDiv {
	font-size: 11px;
	float: right;
	position: absolute;
	top: 5px;
	left: 375px;
}

.tabTable{
	width: 100%;
	font-weight: normal;
	border: 0px solid #C0D0E0;
	border-collapse: collapse;
	margin-left: auto;
	margin-right: auto;
	border-top: 2px solid #C0D0E0;
}
#mc2{
	font-family: "Verdana";
	font-size: 1em;
	background-color: #EDF7FF;
	border-top: 2px solid #C0D0E0;
	color: #595959;
	padding: 20px;
	height:50%;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#edf7ff+0,ffffff+100 */
	background: #edf7ff; /* Old browsers */
	background: -moz-linear-gradient(top,  #edf7ff 0%, #ffffff 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  #edf7ff 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  #edf7ff 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#edf7ff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
}

#AboutSelectedProtectedArea {
	font-family: "Verdana";
	font-size: 1em;
	background-color: #EDF7FF;
	border-top: 2px solid #C0D0E0;
	color: #595959;
	padding: 20px;
	height:50%;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#edf7ff+0,ffffff+100 */
    background: #edf7ff; /* Old browsers */
    background: -moz-linear-gradient(top,  #edf7ff 0%, #ffffff 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top,  #edf7ff 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom,  #edf7ff 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#edf7ff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
}

.descriptionTable{
	width:450px;
	margin-top:15px;
	cursor:pointer;
}

.descriptionTable td {
	color: #595959;
	font-size: .8em;
	vertical-align: top;
	cursor:default;
}

.descriptionTable td:first-child {
}

.descriptionTable td:nth-child(3) {
	width:200px;
	min-width:200px;
	max-width:200px;
}

.flt{
	width:99%;
	height:20px;
}

#climate_quick_view {
	width: 100%;
	text-align: center;
	margin-top: 0px;
}

#climate_quick_view_table {
	width: 100%;
	font-weight: normal;
	border: 0px solid #C0D0E0;
	border-collapse: collapse;
	margin-left: auto;
	margin-right: auto;
	border-top: 2px solid #C0D0E0;
}

#climate_quick_view_table th {
	font-family: "Verdana";
	height: 51px;
	font-size: .8em;
	background-color: #EDF7FF;
	border: 2px;
	color: rgb(80, 131, 176);
	font-weight: bold !important;
}

#climate_quick_view_table td {
	border: 2px solid #C0D0E0;
	color: #606060;
	/* text-align: center; */
	text-align: left;
	vertical-align: middle;
	min-height: 100px;
	height: 100px;
	padding: 9px;
	padding-top: 11px;
	/* width: 33.33%; */
	font-size: 13px;
	cursor: default;
	border-left: 0px;
}


.ui-opacity {
	right: 975px;
}

#tabs{
    /*display:none;*/
}

div.tabcontents {
	border-top: 0px;
	border-bottom: 0px;
	padding: 0px;
	background-color: #FFF;
	height:110%;
}

#tab_container {
	border-left: 2px solid #C0D0E0
	z-index:0;
}

#detailedView {
	position: relative;
	z-index: 2;
	width: 478px;
	float: right;
	padding-top: 0px;
	box-shadow: -1px -1px 40px #2D2D2D;
	border-bottom-left-radius: 20px;
	background-color: white;
	height: 100%;
	overflow-y: auto;
}

#clickToSort {
	position: absolute;
	color: rgb(80, 131, 176);
	font-size: 12px;
	top: 50px;
	background-color: #EDF7FF;
	padding: 5px;
	width: 184px;
	height: 20px;
	padding-right: 0px;
	z-index: 2;
	left: 262px;
	border-left: 2px solid #C0D0E0;
	border-right: 2px solid #C0D0E0;
	border-top: 2px solid #C0D0E0;
	/* padding-top: 2px; */
	line-height: 20px;
	/* padding-left: 10; */
	text-align: center;
	padding-left: 3px;
}

.units{
	font-size: 9px;
	text-align: center;
	padding-left: 9px;
}

#units_area{
	position:relative;
	left:-7px;
}

#clickToSortArrow {
	width: 30px;
	float: right;
	right: 15px;
	position: relative;
	top: 1px;
}

.quick_therm_tmin_small {
	color: #4575B5;
	font-size: 1.5em;
}

.quick_therm_tmax_small {
	color: #DB3F02;
	font-size: 1.5em;
}

.quick_rain_small {
	color: #4575B5;
	font-size: 1.7em;
	left:-3px;
	position:relative;
}

#dataTableDiv {
	width:460px;
}

#dynamicDataTableDiv{
	width:500px;
	top: 0;
	/*border-right: 2px solid #C0D0E0;*/
	height: 85%;
	overflow-y:auto;
	overflow-x:hidden;
}

#dynamicEEMSDataTableDiv{
    width:96%;
}

.metric{
	display:none
}

.t2_header{
	display:none
}

#dynamicDataTable {
	border-collapse: collapse;
	/* position: absolute; */
	height:100%;
	width: 480px;
	overflow-y:scroll;
	position:relative;

}
/* ... */

